Bug 610077.  Drop the default timeout clamp to 4ms.  r=jst